--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hapi/joi": "^15.0.3",
     "bcrypt": "^5.0.1",
+    "config": "^3.3.8",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
